--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,10 +1,10 @@
 ---
 - summary: |
-    Успешная регистрация на сайте
+    Успешная регистрация с помощью email
   requirement: |
     При вводе всех данных пользователь должен быть зарегистрирован на сайте
   prerequisites: |
-    Наличие существующего email-адреса
+    Открыта страница сайта https://codebattle.hexlet.io/
   test-data: |
     - Создаем аккаунт
   steps:
@@ -17,38 +17,42 @@
     Пользователь должен успешно пройти регистрацию
     
 - summary: |
-    Проверка на авторизацию через зарегистрированный аккаунт
+    Успешная авторизация через зарегистрированный аккаунт
   requirement: |
-    Авторизация проходит успешно
+    При правильном выполнении действий происходит авторизация пользователя
   prerequisites: |
-    Открыта страница сайта
+    Открыта страница сайта https://codebattle.hexlet.io/
   test-data: |
     - 
   steps:
-    - Sign in
-    - Авторизовываемся под своим логином и паролем
+    - Нажать кнопку "Sign In"
+    - Ввести зарегистрированный email
+    - Ввести пароль
+    - Нажать кнопку "Submit"
   expected-result: |
     Пользователь должен пройти авторизацию
 
 - summary: |
     Успешная авторизация на сайте с помощью Github
   requirement: |
-    При наличии профиля на Github пользователь должен быть авторизован
+    При правильном выполнении действий происходит авторизация пользователя
   prerequisites: |
-    открыта страница https://codebattle.hexlet.io/session/new?locale=en&next=%2Fremind_password и у пользователя есть профиль на Github
+    Открыта страница сайта https://codebattle.hexlet.io/
+    Имеется аккаунт GitHub
   test-data: |
     -
   steps:
-    - Нажимаем на кнопку "Sign in with Github"
+    - Нажать кнопку "Sign In"
+    - Нажать кнопку "Sign in with GitHub"
   expected-result: |
     Пользователь должен попасть на главную страницу
 
 - summary: |
-    Проверка создания аккаунта на уже зарегистрированный Email
+    Неуспешное создание аккаунта на уже зарегистрированный Email
   requirement: 
-    Вводим email зарегистрированный ранее
+    При правильном выполнении действий появлется сообщение об ошибке "Email is already taken"
   prerequisites: |
-    Открыта страница сайта
+    Открыта страница сайта https://codebattle.hexlet.io/
   test-data: |
     - Ранее зарегистрированная почта
   steps:
@@ -58,7 +62,7 @@
     Пользователь должен получить сообщение об ошибке 'Email is already taken'
 
 - summary: |
-    Проверка на отправку сообщений в чат
+    Успешная отправка сообщений в чат
   requirement: 
     Сообщение отправляется в общий чат
   prerequisites: |
@@ -73,39 +77,46 @@
 - summary: |
     Успешная авторизация на сайте с помощью Discord
   requirement: |
-    При наличии профиля на Discord пользователь должен быть авторизован
+    При правильном выполнении действий происходит регистрация нового пользователя с помощью аккаунта на Discord
   prerequisites: |
-    открыта страница https://codebattle.hexlet.io/session/new?locale=en&next=%2Fremind_password и у пользователя есть профиль на Discord
+    Открыта страница сайта https://codebattle.hexlet.io/
+    Имеется аккаунт Discord
   test-data: |
     -
   steps:
-    - Нажимаем на кнопку "Sign in with Discord"
+    - Нажать кнопку "Sign Up"
+    - Нажать кнопку "Sign in with Discord"
+    - Нажать на кнопку подтверждения на странице Discord после автоматического перехода
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    После подтверждения происходит переход на страницу https://codebattle.hexlet.io/#lobby, появляется доступ
 
 - summary: |
-    Проверка создания игры
+    Успешное создание игры с ботом
   requirement: 
-    Игра должна быть создана 
+    При правильном выполнении действий создается игра
   prerequisites: |
-    Пользователь авторизован и находится на главной странице
+    Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     - 
   steps:
-    - Create a game
-    - Выбираем параметр 'With a bot'
-    - Create battle
+    - Нажать кнопку "Create a game"
+    - Выбрать любой уровень
+    - Выбрать тип игры "With a bot"
+    - Установить любое количество времени игры
+    - Выбрать любое задание
+    - Выбрать любые теги
+    - Нажать кнопку "Create battle"
   expected-result: |
     Пользователь должен перейти в игру с ботом
 
 - summary: |
-    Проверка на завершение игры
+    Успешное завершение игры
   requirement: 
-    Завершаем игру проходя задание или сдаемся
+    При правильном выполнении действий игра завершается
   prerequisites: |
-    Находясь в игре с ботом
+    Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
-    - Авторизованный аккаунт
+    - 
   steps:
     - Вводим ответ
     - Жмем кнопку run или сдаться
@@ -113,26 +124,11 @@
     Пользователь должен получить сообщение о победе или поражение 
 
 - summary: |
-    Успешное создание новой игры с ботом
+    Успешное создание новой игры для других пользователей 
   requirement: |
-    Пользователь должен иметь возможность создавать новую игру с ботом
+    Пользователь должен иметь возможность создавать новую игру для других пользователей
   prerequisites:
-    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
-  test-data: |
-    - 
-  steps:
-    - Нажимаем на кнопку "Create a game"
-    - в всплывающем окне в пункте "Game Type" выбираем "With a bot"
-    - кликаем по кнопке "Create battle"
-  expected-result: |
-    Появляется страница с игрой
-
-- summary: |
-    Успешное создание новой игры с пользователями в сети
-  requirement: |
-    Пользователь должен иметь возможность создавать новую игру с пользователями в сети
-  prerequisites:
-    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     - 
   steps:
@@ -140,31 +136,34 @@
     - в всплывающем окне в пункте "Game Type" выбираем "With others users"
     - кликаем по кнопке "Create battle"
   expected-result: |
-    На главной странице во вкладе "LOBBY" появляется игра со статусом "Continue"
+    На главной странице во вкладе "LOBBY" появляется созданная игра и возможность присоединится 
 
 - summary: |
-    Успешная отправка пользователю приглашения к игре
+    Успешное создание игры с другом
   requirement: |
-    Пользователь должен иметь возможность отправлять приглашение к игре другим пользователям
-  prerequisites:
-    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
+    При правильном выполнении действий создается игра с другом
+  prerequisites: |
+    Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
-    - 
+    -
   steps:
-    - Находим справа кнопку "CREATE A GAME"
-    - Кликаем по ней
-    - в всплывающем окне в пункте "Game Type" выбираем "With a friend"
-    - в пункте "Choose opponent" выбираем друга
-    - кликаем по кнопке "Create battle"
+    - Нажать кнопку "Create a game"
+    - Выбрать любой уровень
+    - Выбрать тип игры "With a friend"
+    - Установить любое количество времени игры
+    - В выпадающем меню выбрать любого пользователя
+    - Выбрать любое задание
+    - Выбрать любые теги
+    - Нажать кнопку "Create battle"
   expected-result: |
-    На главной странице при нажатии на иконку мечей появится сообщение: "You invited name_friend"
+    Выбранному пользователю отправляется приглашение, в чате появляется уведомление об отправке приглашения выбранному пользователю.
 
 - summary: |
     Успешное задание уровня игры
   requirement: |
     Пользователь должен иметь возможность задавать уровень игры
   prerequisites:
-    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     - 
   steps:
@@ -180,7 +179,7 @@
   requirement: |
     Пользователь должен иметь возможность задавать тайминг игры
   prerequisites:
-    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby 
   test-data: |
     - 
   steps:
@@ -196,7 +195,7 @@
   requirement: |
     Пользователь должен иметь возможность задавать игру по тегам
   prerequisites:
-    главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F 
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     - 
   steps:
@@ -212,7 +211,7 @@
   requirement: |
     Пользователь должен иметь возможность принимать приглашение на игру
   prerequisites:
-    открыта главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F и пользователю отправлено приглашение
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby и пользователю отправлено приглашение
   test-data: |
     - 
   steps:
@@ -227,7 +226,7 @@
   requirement: |
     Пользователь должен иметь возможность отклонять приглашение на игру
   prerequisites:
-    открыта главная страница сайта https://codebattle.hexlet.io/session/new?locale=en&next=%2F и пользователю отправлено приглашение
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby и пользователю отправлено приглашение
   test-data: |
     - 
   steps:
@@ -238,11 +237,11 @@
      Остается главная страница
 
 - summary: |
-    Проверка на возможность просмотреть уже завершенные игры
+    Успешный просмотр уже завершенных игры
   requirement: 
     Пользователь должен иметь возможность смотреть сыгранные игры
   prerequisites: |
-    Пользователь авторизован и находится на главной странице
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     - 
   steps:
@@ -253,11 +252,11 @@
     Пользователь должен попасть в уже сыгранную игру
 
 - summary: |
-    Проверка на работоспособность списка лидеров 
+    Успешная работоспособность списка лидеров 
   requirement: 
     Должны отображаться игроки в рейтинге за неделю/месяц/все время
   prerequisites: |
-    Пользователь авторизован и находится на главной странице
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     - 
   steps:
@@ -266,11 +265,11 @@
     Должны отображаться игроки по рейтингу в топе
 
 - summary: |
-    Проверка на отображения всех пользователей в списках рейтинга
+    Успешное отображение всех пользователей в списках рейтинга
   requirement: 
     При попытке поиска по нику пользователь должен быть найден
   prerequisites: |
-    Пользователь авторизован и находится на главной странице
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     - 
   steps:
@@ -284,7 +283,7 @@
   requirement: |
     Пользователь должен иметь возможность восстановить пароль
   prerequisites:
-    окно входа на сайт 
+    Открыта страница входа на сайт https://codebattle.hexlet.io/session/new?locale=en&next=%2F
   test-data: |
     - 
   steps:
@@ -301,7 +300,7 @@
   requirement: |
     Пользователь может отправлять другим пользователям личное сообщение
   prerequisites:
-    Пользователь авторизован и находится на главной странице
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     - 
   steps:
@@ -315,11 +314,11 @@
     Сообщение должно отправится в чат
 
 - summary: |
-    Сайт отображает список всех задач
+    Успешное отображение списка всех задач
   requirement: |
     Сайт должен отображать все задачи, размещенные на сайте
   prerequisites: |
-    Пользователь авторизован и находится на главной странице
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     - 
   steps:
@@ -333,7 +332,7 @@
   requirement: |
     - Пользователь может просматривать ход текущей игры
   prerequisites: |
-    Пользователь авторизован и находится на главной странице
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     - 
   steps:
@@ -346,7 +345,7 @@
   requirement: |
     - Сайт должен отображать расписание предстоящих турниров
   prerequisites: |
-    Открыта страница https://codebattle.hexlet.io/#lobby
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     -
   steps:
@@ -372,7 +371,7 @@
   requirement: |
     - Пользователь может добавлять новые задачи от своего имени
   prerequisites: |
-    Открыта страница https://codebattle.hexlet.io/#lobby
+     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
     -
   steps:
