--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,10 +1,10 @@
 ---
 - summary: |
-    Успешная регистрация на сайте
+    Успешная регистрация с помощью email
   status: pass
     
 - summary: |
-    Проверка на авторизацию через зарегистрированный аккаунт
+    Успешная авторизация через зарегистрированный аккаунт
   status: pass
 
 - summary: |
@@ -12,35 +12,31 @@
   status: pass
 
 - summary: |
-    Проверка создания аккаунта на уже зарегистрированный Email
+    Неуспешное создание аккаунта на уже зарегистрированный Email
   status: pass
 
 - summary: |
-    Проверка на отправку сообщений в чат
+    Успешная отправка сообщений в чат
   status: pass
 
 - summary: |
     Успешная авторизация на сайте с помощью Discord
   status: pass
-
+  
 - summary: |
-    Проверка создания игры
+    Успешное создание игры с ботом
   status: pass
 
 - summary: |
-    Проверка на завершение игры
+    Успешное завершение игры
   status: pass
 
 - summary: |
-    Успешное создание новой игры с ботом
+    Успешное создание новой игры для других пользователей 
   status: pass
 
 - summary: |
-    Успешное создание новой игры с пользователями в сети
-  status: pass
-
-- summary: |
-    Успешная отправка пользователю приглашения к игре
+    Успешное создание игры с другом
   status: pass
 
 - summary: |
@@ -54,25 +50,25 @@
 - summary: |
     Успешное задание игры по тегам
   status: pass
-  
+
 - summary: |
     Успешное принятие приглашения на игру
   status: pass
-
+  
 - summary: |
     Успешное отклонение приглашения на игру
   status: pass
-  
+
 - summary: |
-    Проверка на возможность просмотреть уже завершенные игры
-  status: pass
-  
-- summary: |
-    Проверка на работоспособность списка лидеров 
+    Успешный просмотр уже завершенных игры
   status: pass
 
 - summary: |
-    Проверка на отображения всех пользователей в списках рейтинга
+    Успешная работоспособность списка лидеров 
+  status: pass
+
+- summary: |
+    Успешное отображение всех пользователей в списках рейтинга
   status: pass
 
 - summary: |
@@ -80,11 +76,7 @@
   status: pass
 
 - summary: |
-    Успешное отправление личного сообщения пользователям в сети
-  status: pass
-
-- summary: |
-    Сайт должен отображать список всех задач
+    Успешное отображение списка всех задач
   status: pass
 
 - summary: |
