--- a/issues.yml
+++ b/issues.yml
@@ -2,3 +2,4 @@
 issues:
   - url: 'https://github.com/hexlet-codebattle/codebattle/issues/1391#issuecomment-1807006616'
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/1638#issuecomment-1817435677"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1667#issuecomment-1828268101"
