--- a/test-cases.yml
+++ b/test-cases.yml
@@ -19,7 +19,7 @@
 - summary: |
     Успешная авторизация через зарегистрированный аккаунт
   requirement: |
-    При правильном выполнении действий происходит авторизация пользователя
+    Пользователь успешно проходит авторизацию
   prerequisites: |
     Открыта страница сайта https://codebattle.hexlet.io/
   test-data: |
@@ -35,7 +35,7 @@
 - summary: |
     Успешная авторизация на сайте с помощью Github
   requirement: |
-    При правильном выполнении действий происходит авторизация пользователя
+    Пользователь успешно проходит авторизацию
   prerequisites: |
     Открыта страница сайта https://codebattle.hexlet.io/
     Имеется аккаунт GitHub
@@ -50,7 +50,7 @@
 - summary: |
     Неуспешное создание аккаунта на уже зарегистрированный Email
   requirement: 
-    При правильном выполнении действий появлется сообщение об ошибке "Email is already taken"
+    Пользователь должен увидеть сообщение об ошибке "Email is already taken"
   prerequisites: |
     Открыта страница сайта https://codebattle.hexlet.io/
   test-data: |
@@ -77,7 +77,7 @@
 - summary: |
     Успешная авторизация на сайте с помощью Discord
   requirement: |
-    При правильном выполнении действий происходит регистрация нового пользователя с помощью аккаунта на Discord
+    Пользователь успешно проходит авторизацию с помощью аккаунта Discord
   prerequisites: |
     Открыта страница сайта https://codebattle.hexlet.io/
     Имеется аккаунт Discord
@@ -93,7 +93,7 @@
 - summary: |
     Успешное создание игры с ботом
   requirement: 
-    При правильном выполнении действий создается игра
+    Пользователь успешно создает игру
   prerequisites: |
     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
@@ -112,7 +112,7 @@
 - summary: |
     Успешное завершение игры
   requirement: 
-    При правильном выполнении действий игра завершается
+    Пользователь успешно завершает игру
   prerequisites: |
     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
@@ -141,7 +141,7 @@
 - summary: |
     Успешное создание игры с другом
   requirement: |
-    При правильном выполнении действий создается игра с другом
+    Пользователь успешно создает игру с другом
   prerequisites: |
     Пользователь авторизован, открыта страница сайта https://codebattle.hexlet.io/#lobby
   test-data: |
